1.9.0/templates/svc-querier.yaml
apiVersion: v1
kind: Service
metadata:
  name: querier
spec:
  ports:
    - port: 80
  selector:
    name: querier
